[gd_scene load_steps=4 format=3 uid="uid://djwiw62a5ltqt"]

[ext_resource type="Script" path="res://scripts/UI/Menu/action_menu.gd" id="1_rntm3"]
[ext_resource type="PackedScene" uid="uid://b30pk6sumq6rl" path="res://scenes/UI/action_button.tscn" id="3_crnpg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p3q5r"]
bg_color = Color(0.141176, 0.301961, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="ActionsMenu" type="Panel"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 208.0
offset_top = -549.0
offset_right = 389.0
offset_bottom = -383.0
grow_vertical = 0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_p3q5r")
script = ExtResource("1_rntm3")

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 173.0
offset_bottom = 157.0

[node name="Action1" parent="Buttons" instance=ExtResource("3_crnpg")]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_bottom = NodePath("../Action2")
focus_mode = 0
text = "Action 1"

[node name="Action2" parent="Buttons" instance=ExtResource("3_crnpg")]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../Action1")
focus_neighbor_bottom = NodePath("../Action3")
focus_mode = 0
text = "Action 2"

[node name="Action3" parent="Buttons" instance=ExtResource("3_crnpg")]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../Action2")
focus_neighbor_bottom = NodePath("../Action4")
focus_mode = 0
text = "Action 3"

[node name="Action4" parent="Buttons" instance=ExtResource("3_crnpg")]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../Action3")
focus_mode = 0
text = "Action 4"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="button_up" from="Buttons/Action1" to="Buttons/Action1" method="_on_button_up"]
[connection signal="button_up" from="Buttons/Action2" to="." method="_on_button_up"]
[connection signal="button_up" from="Buttons/Action3" to="." method="_on_button_up"]
[connection signal="button_up" from="Buttons/Action4" to="." method="_on_button_up"]
